# DataProjects

./: .gitignore  README.md
big_family/: README.md  solution_big_family.py
circle_point_generator/: README.md  data-exploration.ipynb  main.py  pyproject.toml  solution.py
delivery_duration_prediction/: 1.0-data-exploration.ipynb  README.md  my_functions.py  pyproject.toml
delivery_duration_prediction/catboost_info/: catboost_training.json  learn_error.tsv  partial_stats.tsv  test_error.tsv  time_left.tsv
delivery_duration_prediction/catboost_info/eval_dataset/: events.out.tfevents
delivery_duration_prediction/catboost_info/learn/: events.out.tfevents
delivery_duration_prediction/catboost_info/test/: events.out.tfevents
insights_from_failed_orders/: README.md  main.py  pyproject.toml
