[tool.poetry]
name = "circle-point-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "circle_point_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
black = "^23.3.0"
seaborn = "^0.12.2"
ipykernel = "^6.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
